force-app/main/default/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Placed_at_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Placed at Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Polygon_Coordinates__c</fullName>
        <description>Stores JSON array of [y, x] coordinates (Leaflet Simple CRS). Example: [[100,200],[300,200],[300,400],[100,400]]</description>
        <label>Polygon Coordinates</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Area</fullName>
                </value>
                <value>
                    <fullName>FBS</fullName>
                </value>
                <value>
                    <fullName>ILT</fullName>
                </value>
                <value>
                    <fullName>IRT/ET</fullName>
                </value>
                <value>
                    <fullName>Lawn Zone</fullName>
                </value>
                <value>
                    <fullName>Logbook</fullName>
                </value>
                <value>
                    <fullName>MISC</fullName>
                </value>
                <value>
                    <fullName>MLS</fullName>
                </value>
                <value>
                    <fullName>PHT</fullName>
                </value>
                <value>
                    <fullName>RBS</fullName>
                </value>
                <value>
                    <fullName>TBS</fullName>
                </value>
                <value>
                    <fullName>WT</fullName>
                </value>
                <value>
                    <fullName>Zone</fullName>
                </value>
                <value>
                    <fullName>Pool Pump</fullName>
                </value>
                <value>
                    <fullName>Skimmer Basket</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X_Coordinate__c</fullName>
        <label>X Coordinate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Y_Coordinate__c</fullName>
        <label>Y Coordinate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>